--- a/examendiseno/vite/vite-project/Kittens/index.html
+++ b/examendiseno/vite/vite-project/Kittens/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./scss/styless.scss">
   <!--    Link para usar la tipografia-->
   <link href='http://fonts.googleapis.com/css?family=Didact+Gothic|Ribeye+Marrow' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="estilo.scss">
 
 </head>
 <body>
