hempezamos con mario

--- a/examendiseno/vite/vite-project/Kittens/index.html
+++ b/examendiseno/vite/vite-project/Kittens/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./scss/styless.scss">
     <!--    Link para usar la tipografia-->
     <link href='http://fonts.googleapis.com/css?family=Didact+Gothic|Ribeye+Marrow' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="scss/estilo.scss">
+    <link rel="stylesheet" href="scss/estilo2.scss">
 
 </head>
 <body>
@@ -18,6 +18,7 @@
     <div class="wrapper clearfix">
         <nav class="navigation">
             <ul>
+
                 <li><a href="#">Home</a></li>
                 <li><a href="kittens.html">Kittens</a></li>
                 <li><a href="about.html">About</a></li>
